force-app/main/default/objects/SalesLine__c/SalesLine__c.object-meta.xml
<CustomObject>
    <description>Sales Order Lines belonging to a Sales Order (Header)</description>
    <label>Blanket Order Line</label>
    <nameField>
        <label>Line Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blanket Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>