force-app/main/default/objects/SalesLine__c/fields/Document_No__c.field-meta.xml
<CustomField>
    <fullName>Document_No__c</fullName>
    <description>Document No. from ERP System</description>
    <label>Document No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>