force-app/main/default/objects/SalesLine__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Document Type from ERP System</description>
    <label>Document Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>