force-app/main/default/objects/SalesLine__c/fields/Drop_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Drop_Shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drop Shipment</label>
    <type>Checkbox</type>
</CustomField>