force-app/main/default/objects/SalesLine__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <formula>IF  (Quantity__c -  Quantity_Invoiced__c = 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced</label>
    <type>Text</type>
</CustomField>