force-app/main/default/objects/SalesLine__c/fields/Line_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Line_Discount_Percent__c</fullName>
    <label>Line Discount %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>