force-app/main/default/objects/SalesLine__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Line Number from ERP system</description>
    <label>Line Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>