force-app/main/default/objects/SalesLine__c/fields/Order_date__c.field-meta.xml
<CustomField>
    <fullName>Order_date__c</fullName>
    <description>Date from NAV header from Blanket Order, used for Rapidi integration.</description>
    <label>Order date</label>
    <type>Date</type>
</CustomField>