force-app/main/default/objects/SalesLine__c/fields/Outstanding_Amount_LCY__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount_LCY__c</fullName>
    <label>Outstanding Amount LCY</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>