force-app/main/default/objects/SalesLine__c/fields/Outstanding_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Quantity__c</fullName>
    <label>Outstanding Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>