force-app/main/default/objects/SalesLine__c/fields/Quantity_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Invoiced__c</fullName>
    <description>Pulled from NAV Blanket Order Line</description>
    <label>Quantity Invoiced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>