force-app/main/default/objects/SalesLine__c/fields/Sales_Header__c.field-meta.xml
<CustomField>
    <fullName>Sales_Header__c</fullName>
    <label>Sales Order</label>
    <referenceTo>SalesHeader__c</referenceTo>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>