force-app/main/default/objects/SalesLine__c/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <label>Sales Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>