force-app/main/default/objects/SalesLine__c/fields/Shipped_Not_Invoiced_LCY__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Not_Invoiced_LCY__c</fullName>
    <label>Shipped Not Invoiced LCY</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>