force-app/main/default/objects/SalesLine__c/fields/Tax_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Group_Code__c</fullName>
    <label>Tax Group Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>