force-app/main/default/objects/SalesLine__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>G/L Account</fullName>
            </value>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Fixed Asset</fullName>
            </value>
            <value>
                <fullName>Charge (Item)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>