force-app/main/default/objects/SalesLine__c/fields/Unit_Of_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure_Code__c</fullName>
    <label>Unit Of Measure Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>